# first-responder

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 001-synthetic-fault-injection.md  002-tools-as-contract.md  003-single-agent.md  004-evaluation-methodology.md  README.md
first_responder/: __init__.py  cli.py
first_responder/schema/: __init__.py  alert.py  diagnosis.py  ground_truth.py  telemetry.py  time.py
first_responder/simulator/: __init__.py  render.py  scenario.py  store.py
first_responder/simulator/scenarios/: __init__.py  bad_deploy.py  cascading_timeout.py  pool_exhaustion.py
first_responder/tools/: __init__.py  base.py  deploys.py  logs.py  metrics.py  registry.py
tests/: test_smoke.py
tests/schema/: test_diagnosis.py  test_ground_truth.py  test_telemetry.py  test_time.py
tests/simulator/: leak_guard.py  scenario_asserts.py  test_bad_deploy.py  test_cascading_timeout.py  test_pool_exhaustion.py  test_render.py  test_scenario.py  test_store.py
tests/tools/: test_deploys.py  test_logs.py  test_metrics.py  test_registry.py
