[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "first-responder"
version = "0.1.0"
description = "Autonomous agent that diagnoses production incidents from logs, metrics, and traces, evaluated against fault-injected scenarios with known ground truth."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Adam Akhlaq", email = "adam.akhlaq21@gmail.com" }]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Repository = "https://github.com/adamakhlaq/first-responder"

[project.scripts]
first-responder = "first_responder.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["first_responder"]

[tool.ruff.lint.flake8-bugbear]
# typer uses callables (Option/Argument) as default values by design.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.11"
files = ["first_responder"]
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
